--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,9 @@ jobs:
 
       - name: Install FOSSA CLI
         run: |
-          curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | bash
+          wget https://github.com/fossas/fossa-cli/releases/latest/download/fossa-linux-amd64
+          chmod +x fossa-linux-amd64
+          sudo mv fossa-linux-amd64 /usr/local/bin/fossa
 
       - name: Run FOSSA Analysis
         env:
