--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,4 +43,4 @@ jobs:
         env:
           FOSSA_API_KEY: ${{ secrets.FOSSA_API_KEY }}
         run: |
-          fossa analyze
+          fossa analyze --project "inherits"
